# starry-next

./: .gitignore  Cargo.toml  Makefile  README.md  build_img.sh  index.html  objdumpmmap2  search-index.js  src-files.js  页缓存机制.md
api/: Cargo.toml
api/src/: lib.rs  ptr.rs  signal.rs  socket.rs  time.rs
api/src/file/: fs.rs  mod.rs  page_cache.rs
api/src/imp/: futex.rs  mod.rs  signal.rs  sys.rs  time.rs
api/src/imp/fd/: mod.rs  ops.rs
api/src/imp/fs/: ctl.rs  fd_ops.rs  io.rs  mod.rs  mount.rs  pipe.rs  stat.rs
api/src/imp/mm/: brk.rs  mmap.rs
api/src/imp/task/: clone.rs  execve.rs  exit.rs  schedule.rs  thread.rs  wait.rs
api/src/imp/utils/: time.rs
core/: Cargo.toml  build.rs
core/include/: fcntl.h  pthread.h
core/src/: entry.rs  futex.rs  lib.rs  mm.rs  path.rs  task.rs  time.rs
core/src/fd/: fs.rs  mod.rs  net.rs  pipe.rs  stdio.rs
scripts/: app_test.sh  config.toml.temp  get_deps.sh  oscomp_test.sh
src/: entry.rs  main.rs  mm.rs  ptr.rs  syscall.rs  task.rs
starry/: all.html  fn.main.html  index.html  macro.syscall_body.html  sidebar-items.js
starry_api/: all.html  enum.FileType.html  fn.check_mounted.html  fn.do_exit.html  fn.mount_fat_fs.html  fn.send_signal_process.html  fn.send_signal_process_group.html  fn.send_signal_thread.html  fn.sys_arch_prctl.html  fn.sys_brk.html  fn.sys_chdir.html  fn.sys_clock_gettime.html  fn.sys_clone.html  fn.sys_close.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_execve.html  fn.sys_exit.html  fn.sys_exit_group.html  fn.sys_fcntl.html  fn.sys_fork.html  fn.sys_fstat.html  fn.sys_fstatat.html  (+55 more)
(+250 files in other folders)
