[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axsync.workspace = true
axtask.workspace = true
arceos_posix_api.workspace = true
axptr.workspace = true
axsignal.workspace = true

axerrno.workspace = true
bitflags.workspace = true
memory_addr.workspace = true
linkme.workspace = true

starry-core.workspace = true

num_enum = { version = "0.7", default-features = false }
static_assertions = "1.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
