[package]
name = "starry-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true

axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axnet.workspace = true
axns.workspace = true
axsync.workspace = true
axtask.workspace = true

axerrno.workspace = true
bitflags.workspace = true
linkme.workspace = true
memory_addr.workspace = true

axio = "0.1.1"
crate_interface = "0.1"
ctor_bare = "0.2.1"
flatten_objects = "0.2.3"
kernel-elf-parser = "0.3"
numeric-enum-macro = "0.2"
percpu = "0.2.0"
spin = "0.9"
xmas-elf = "0.9"

[build-dependencies]
bindgen = { version = "0.69" }
